# frdm_kl25z_minimal_build

./: .gitignore  CMakeLists.txt  README.md
.commands/: build_firmware.sh  container_build.sh  container_push.sh  verify_firmware.sh
.devcontainer/: devcontainer.json
.docker/: Dockerfile
.github/workflows/: ci.yaml  firmware.yaml  verify-arch.yaml
cmake/: firmware_management.cmake  readme_docs.cmake  render_readme.cmake  toolchain-arm-none-eabi.cmake
docs/: README_template.md  build_transformations.md  target_sram_layout.md
docs/diagrams/: abi_contracts.md  build_pipeline.mmd  debug_pipeline.mmd  flash_pipeline.mmd  target_flash_layout.md  target_sram_layout.md
linker/: kl25z.ld
src/: main.cpp
startup/: startup_kl25z.S
system/: system_kl25z.cpp
test/: hello.py
verify/: conftest.py  requirements.in  test_firmware.py
